# ekg

./: .gitignore  .hdoc.toml  CMakeLists.txt  CODE-OF-CONDUCT.md  Dockerfile  README.md  ekg-ui-library.sublime-project  faq.txt  linux.sh
.github/workflows/: cmake-worker.yml
cmake/: ekg-config.cmake  io.cmake  properties.cmake
devlog/: commit.txt
include/ekg/: ekg.hpp
include/ekg/callback/: callback.hpp
include/ekg/core/: context.hpp  pools.hpp  runtime.hpp
include/ekg/draw/: allocator.hpp  font_renderer.hpp  shape.hpp
include/ekg/draw/shape/: shape.hpp
include/ekg/draw/typography/: font.hpp  glyph.hpp
include/ekg/gpu/: allocator.hpp  api.hpp  data.hpp  sampler.hpp
include/ekg/gpu/opengl/: gl.hpp  shaders.hpp
include/ekg/handler/: callback.hpp  input.hpp  theme.hpp
include/ekg/handler/callback/: handler.hpp
include/ekg/handler/input/: handler.hpp
include/ekg/handler/theme/: handler.hpp
include/ekg/input/: handler.hpp  input.hpp
include/ekg/io/: descriptor.hpp  design.hpp  event.hpp  font.hpp  gpu.hpp  input.hpp  log.hpp  memory.hpp  safety.hpp  task.hpp  timing.hpp  typography.hpp  utf.hpp
include/ekg/layout/: docknize.hpp  extentnize.hpp  scalenize.hpp
include/ekg/math/: floating_point.hpp  geometry.hpp
include/ekg/os/: ekg_glfw.hpp  ekg_opengl.hpp  ekg_sdl.hpp  platform.hpp
include/ekg/platform/: base.hpp
include/ekg/platform/sdl/: sdl2.hpp
include/ekg/service/: handler.hpp
include/ekg/ui/: abstract.hpp  properties.hpp  property.hpp  stack.hpp  types.hpp
include/ekg/ui/button/: button.hpp  button_widget.hpp  widget.hpp
include/ekg/ui/checkbox/: checkbox.hpp  checkbox_widget.hpp
include/ekg/ui/frame/: frame.hpp  frame_widget.hpp  ui_frame.hpp  ui_frame_widget.hpp  widget.hpp
include/ekg/ui/label/: label.hpp  label_widget.hpp  widget.hpp
include/ekg/ui/popup/: popup.hpp  widget.hpp
include/ekg/ui/scrollbar/: scrollbar.hpp  scrollbar_widget.hpp  ui_scrollbar_widget.h  widget.hpp
include/ekg/ui/slider/: slider.hpp  slider_widget.hpp  widget.hpp
include/ekg/ui/textbox/: textbox.hpp  widget.hpp
src/: ekg.cpp
src/core/: context.cpp  core.cpp  pools.cpp  ruintime.cpp  runtime.cpp
src/draw/: allocator.cpp  font_renderer.cpp  shape.cpp
src/draw/shape/: shape.cpp
src/draw/typography/: font.cpp
src/gpu/: allocator.cpp  data.cpp  opengl_pipeline_template.cpp  sampler.cpp
src/gpu/opengl/: gl.cpp  shaders.cpp
src/handler/: callback.cpp  input.cpp  theme.cpp
src/handler/callback/: handler.cpp
src/handler/input/: handler.cpp
src/handler/theme/: handler.cpp
src/io/: algorithm.cpp  design.cpp  event.cpp  font.cpp  gpu.cpp  input.cpp  log.cpp  memory.cpp  safety.cpp  task.cpp  text.cpp  timing.cpp  utf.cpp
src/layout/: dimension.cpp  docknize.cpp  extentnize.cpp  scale.cpp  scalenize.cpp
src/math/: geometry.cpp
src/os/: ekg_glfw.cpp  ekg_opengl.cpp  ekg_sdl.cpp
src/platform/sdl/: sdl2.cpp
src/service/: handler.cpp  input.cpp  theme.cpp
src/ui/: abstract.cpp  property.cpp  stack.cpp
src/ui/abstract/: ui_abstract.cpp
src/ui/button/: button.cpp  button_widget.cpp  ui_button_widget.cpp  widget.cpp
src/ui/checkbox/: checkbox_widget.cpp  scrollbar_widget.cpp  ui_checkbox.cpp  ui_checkbox_widget.cpp
src/ui/frame/: frame.cpp  frame_widget.cpp  ui_frame.cpp  ui_frame_widget.cpp  widget.cpp
src/ui/label/: label.cpp  label_widget.cpp  ui_label_widget.cpp  widget.cpp
src/ui/listbox/: ui_listbox_widget.cpp
src/ui/popup/: popup.cpp  ui_popup_widget.cpp  widget.cpp
src/ui/scrollbar/: scrollbar.cpp  scrollbar_widget.cpp  ui_scrollbar_embedded_widget.cpp  ui_scrollbar_widget.cpp  widget.cpp
src/ui/slider/: slider.cpp  ui_slider_widget.cpp  widget.cpp
src/ui/textbox/: textbox.cpp  ui_textbox.cpp  ui_textbox_widget.cpp  widget.cpp
src/util/: geometry.cpp  gui.cpp  io.cpp
test/src/: ekg_gui_showcase_test.cpp
version/: autorelease.py  commit.txt  todo.txt
